--- a/day1/1_afternoon/1a _exercise.Rmd
+++ b/day1/1_afternoon/1a _exercise.Rmd
@@ -18,18 +18,20 @@ The Adult Genotype Tissue Expression (GTEx) Project is a comprehensive public re
 The project collected samples from up to 54 non-diseased tissue sites across nearly 1,000 deceased individuals. All individuals were densely genotyped to assess genetic variation within their genomes by Whole Genome Sequencing (WGS). Gene expression of each tissue was assessed by RNA sequencing (bulk RNA-seq). Expression quantitative trait loci (eQTLs) were identified as genetic variants that were significantly correlated with changes in the expression of nearby genes. The project provides a comprehensive identification of tissue-shared and tissue-specific human eQTLs, as well as a valuable basis for the mechanistic interpretation of the many non-coding genetic variants that have been associated with common human diseases, such as heart disease, cancer, diabetes, asthma, and stroke.
 
 
-#Question 1
+#Question 1. 
 
 Load the tidyverse package, and use the function read_delim() to read in sample-level metadata that was obtained from the GTEx Portal (GTEx_Analysis_v8_Annotations_SampleAttributesDS.txt). In addition, open the data dictionary GTEx_Analysis_v8_Annotations_SampleAttributesDD.xlsx in Excel, which provides a description of each column in the .txt file.
-
 
 ```{r}
 
 #Load tidyverse package into the R environment 
 library(tidyverse)
 
-#Read in sample-level metadata obtained from GTEx portal and name in 'sample_attributes'
+#Read in sample-level metadata obtained from GTEx portal and save it as 'sample_attributes'
 sample_attributes <- read_delim("~/Data/GTEx/GTEx_Analysis_v8_Annotations_SampleAttributesDS.txt")
+
+#Print 'sample_attributes' to check that it was correctly done (has 22,951 observations and 63 variables)
+head(sample_attributes)
 
 ```
 
@@ -38,13 +40,12 @@ sample_attributes <- read_delim("~/Data/GTEx/GTEx_Analysis_v8_Annotations_Sample
 
 View the first rows of the tibble by simply entering the variable name in which you stored it. Notice that some of the columns were cut off due to the limits of the display. Use the glimpse() function to examine the data types and first entries of all of the columns.
 
-
 ```{r}
 
 #Observing first couple of rows of 'sample_attributes'
 sample_attributes
 
-#Observing first couple of rows of 'sample_attributes' using 'glimpse' command
+#Observing first couple of rows of 'sample_attributes' using 'glimpse' function
 glimpse(sample_attributes)
 
 ```
@@ -55,32 +56,34 @@ glimpse(sample_attributes)
 
 Use the filter() function to subset the dataset to only the RNA-seq data by selecting rows for which the SMGEBTCHT column contains the value "TruSeq.v1". TruSeq is a library preparation kit from Illumina.
 
-
 ```{r}
 
-#Use 'filter' function to select for only RNA-seq data in 'sample attributes'
+#Use 'filter' function to select for only RNA-seq data in 'sample attributes' and save it in new dataframe called 'rnaseq_sample_attributes_filtered' (has 18,858 observations and 63 variables)
 rnaseq_sample_attributes_filtered <- filter(sample_attributes, SMGEBTCHT == "TruSeq.v1")
 
 ```
+
 
 
 #Question 4. 
 
 Plot the number of samples from each tissue (SMTSD) as a barplot. (Hint: if you do not specify a y-axis, ggplot will use stat = count as the default, so the y-axis will represent the number of occurrences of each value of your x variable). See this webpage for a code snippet for rotating axis labels, which will be relevant throughout this exercise. Always be sure to label your axes with informative names!
 
+webpage = https://stackoverflow.com/questions/1330989/rotating-and-spacing-axis-labels-in-ggplot2 
+
 ```{r}
 
-#Creating bar plot to see the number of samples from each tissue (SMTSD) 
+#Creating a bar plot to see the number of samples from each tissue (SMTSD) 
 ggplot(data = rnaseq_sample_attributes_filtered, 
-       mapping = aes(x = SMTSD)) +
-  geom_bar() + 
+       mapping = aes(x = SMTSD, 
+                     fill = SMTSD)) + #Because I didn't specify a y-axis here, ggplot will be using stat = count
+  geom_bar() + #I can also write geom_bar(stat = "count") to do the same thing 
   xlab("Tissue types (SMTSD)") +
   ylab("Frequency") +
-  ggtitle("Number of samples from each tissue (SM)") +
-  theme_classic() + 
-  coord_flip()
-
-#geom_bar(stat = "count") -> same thing
+  ggtitle("Number of samples from each tissue (SM)") + 
+  coord_flip() + #Flipped the coordinates so that the long x-axis titles have more space
+  theme(legend.key.size = unit(1, 'cm')) +
+  theme_classic()
 
 ```
 
@@ -89,24 +92,28 @@ ggplot(data = rnaseq_sample_attributes_filtered,
 
 The RNA integrity number is a measurement of the degree of RNA degradation based on characteristics of an electropherogram trace. It ranges from 1 to 10, with 10 being the least degraded. Plot the distribution of RNA integrity numbers across your samples. What type of plot is best for visualizing a single continuous distribution? Take a look at this “cheat sheet” for hints.
 
+cheat sheet = https://images.datacamp.com/image/upload/v1666806657/Marketing/Blog/ggplot2_cheat_sheet.pdf 
+
 What is the shape of the distribution? Is it unimodal?
-
-It's bell curve -> unimodal 
-
 
 ```{r}
 
+#Plotting distribution of RNA integrity numbers across samples using histogram 
 ggplot(data = rnaseq_sample_attributes_filtered, 
        mapping = aes(x = SMRIN), alpha = 0.5) +
-  geom_histogram(bins = 25, 
-                 color = "white", 
-                 mapping = aes(fill = after_stat(count))) +
+  geom_histogram(bins = 25, #Decreased bin size for better presentation 
+                 color = "white", #Coloring the borders white to enhance border separation 
+                 mapping = aes(fill = after_stat(count))) + #Setting the fill color of each bar according to the counts present 
   xlab("RNA integrity (SMRIN)") +
-  #ylab("Frequency") +
-  ggtitle("Distribution of RNA integrity numbers") +
-  theme_classic()
+  ylab("Frequency") +
+  ggtitle("Distribution of RNA integrity numbers") + 
+  theme_classic() +
+  theme(plot.title = element_text(hjust = 0.5)) #Centering the main title
 
-?geom_histogram
+#Saved the plot as a pdf 
+ggsave(filename = "q5_plot.pdf")
+
+###ANSWER: The shape is quite evenly distributed in a uni modal bell-curve manner. It is shifted a bit towards the left side, making it a negatively skewed distribution. 
 
 ```
 
@@ -119,16 +126,19 @@ Do you notice any differences across tissues? Are certain tissues outliers? What
 
 ```{r}
 
+#Plotting distribution of RIN, stratified by tissue using a boxplot 
 ggplot(data = rnaseq_sample_attributes_filtered, 
        mapping = aes(x = SMRIN, 
-                     y = SMTSD)) +
+                     y = SMTSD, 
+                     fill = SMTSD)) +
   geom_boxplot() +
-  xlab("Tissue types (SMTSD)") +
-  ylab("RNA integrity (RIN)") +
-  ggtitle("Distribution of RNA integrity numbers") +
+  xlab("RNA integrity number (RIN)") +
+  ylab("Tissue types (SMTSD)") +
+  ggtitle("Distribution of RNA integrity numbers stratified by tissue") +
   theme_classic()
 
-rnaseq_sample_attributes_filtered$SMGEBTCHD
+###ANSWER: Overall, it seems that the average RIN is from 6 to 8 for most tissues. However, there are 3 cell lines with a relatively stark outlier: leukemia cell line (CML), EBV transformed lymphocytes, and cultured fibroblast cells. Compared to the other tissue types, these cells were cultured in a lab, which leads to possibly slightly less third variables having an impact on growth conditions leading to low RNA degradation levels. 
+
 ```
 
 
@@ -140,14 +150,19 @@ Do you notice any differences across tissues? Which tissues are outliers? Look o
 
 ```{r}
 
+#Plotting number of genes detected per sample, stratifying by tissue using a boxplot 
 ggplot(data = rnaseq_sample_attributes_filtered, 
        mapping = aes(x = SMGNSDTC, 
-                     y = SMTSD)) +
+                     y = SMRIN, 
+                     fill = SMTSD)) +
   geom_boxplot() +
-  xlab("Tissue types (SMTSD)") +
-  ylab("RNA integrity (RIN)") +
-  ggtitle("Distribution of RNA integrity numbers") +
-  theme_classic()
+  xlab("Total number of genes with >= 5 exon mapping reads (SMGNSDTC)") +
+  ylab("RNA Integrity Number (RIN)") +
+  ggtitle("Distribution of RNA Integrity Numbers Stratified by Tissue") +
+  theme_classic() +
+  theme(plot.title = element_text(hjust = 0.5))
+
+###ANSWER: The range is a bit more variable compared to what I found in question 6, but it is mostly in the 6.5 to 8 across most tissues. The 3 tissues that are highly outlier seem to also be the same as before: leukemia cell line (CML), EBV transformed lymphocytes, and cultured fibroblast cells. According to the paper, it says that testis contribute disproportionately to both cis and trans-eQTL's and as seen in my figure, it is on the slightly lower range of RIN, from 6 to 7. Testis could have a higher RNA degradation level because it has high transcriptional activity due to spermatogenesis. This continuous turnover probably leads to higher presence of degrading molecules like RNase to help. 
 
 ```
 
@@ -161,6 +176,7 @@ What relationships do you notice? Does the relationship depend on tissue?
 
 ```{r}
 
+#Plotting ischemic time and RIN
 ggplot(data = rnaseq_sample_attributes_filtered, 
        mapping = aes(x = SMTSISCH, 
                      y = SMRIN)) +
@@ -168,12 +184,18 @@ ggplot(data = rnaseq_sample_attributes_filtered,
              alpha = 0.5) +
   facet_wrap(~SMTSD) +
   theme_classic() + 
+  xlab("Total ischemic time (SMTSISCH)") +
+  ylab("RNA Integrity Number (RIN)") +
+  ggtitle("Relationship between ischemic time and RNA degradation") +
+  theme_classic() +
+  theme(strip.background = element_blank(), 
+        strip.text = element_text(face = "bold", 
+                                  size = 7)) +
+  theme(plot.title = element_text(hjust = 0.5)) +
   geom_smooth(method = "lm") 
 
-ggsave(filename = "q8.pdf")
 
-yes
-
+###ANSWER: It seems that most tissues have a negative linear relationship between ischemic time and RIN. It does seem that the relationship depends on tissue based on most of the tissues demonstrating a linear trend.  
 
 ```
 
@@ -187,6 +209,8 @@ What relationships do you notice? Does the relationship depend on tissue?
 
 ```{r}
 
+#Plotting ischemic time and RIN modified with autolysis score
+
 ggplot(data = rnaseq_sample_attributes_filtered, 
        mapping = aes(x = SMTSISCH, 
                      y = SMRIN)) +
@@ -196,15 +220,15 @@ ggplot(data = rnaseq_sample_attributes_filtered,
   geom_smooth(method = "lm") +
   facet_wrap(~SMTSD) +
   xlab("Total ischemic time (SMTSISCH)") +
-  ylab("RNA integrity (SMRIN)") +
+  ylab("RNA Integrity Number (RIN)") +
+  ggtitle("Relationship between ischemic time and RNA degradation modified by autolysis score (SMATSSCR)") +
   theme_classic() +
+  theme(plot.title = element_text(hjust = 0.5)) +
   theme(strip.background = element_blank(), 
-        strip.text = element_text(face = "bold")) 
-  
+        strip.text = element_text(face = "bold", 
+                                  size = 7)) 
 
-ggsave(filename = "q9.pdf")
-
-#change title to bold and get rid of boxes (called strips)
+###ANSWER: Most of the tissues portray a negative linear relationship between ischemic time and RIN. Now that it has been modified by autolysis score, it seems the relationship does not depend on tissue. Based on the figure, there are quite a bit of tissues that have no/zero linear relationship (example = various brain tissues, GI-tract and related intestinal tissues, whole blood, etc)
 
 ```
 
